examples/test/testpolicy4859.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4859
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key17: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value30
          key1: value11
          key19: value41
      podSelector:
        matchLabels:
          key38: value5
          key48: value15
